--- a/index.html
+++ b/index.html
@@ -245,6 +245,11 @@
         color: #a20a0a;
       }
 
+      .centre {
+        margin-top: 0rem;
+        text-align: center;
+      }
+
       .logo {
         margin-top: -10rem;
       }
@@ -285,9 +290,9 @@
         grateful for your support and partnership, and we look forward to
         continuing to work with you in the new year. May the holidays be a time
         of rest, relaxation, and celebration, and may the new year bring you
-        prosperity, success, and all of your heart's desires. Merry Christmas
-        and Happy New Year!
+        prosperity, success, and all of your heart's desires.
       </p>
+      <p class="wishes centre">Merry Christmas and Happy New Year!</p>
       <svg
         class="logo"
         xmlns="http://www.w3.org/2000/svg"
