--- a/index.html
+++ b/index.html
@@ -19,146 +19,179 @@
           29.6px 40.2px 56.2px -2.5px hsl(var(--shadow-color) / 0.34);
       }
 
-      .tree-1 {
+      .bauble-1 {
+        left: 250px;
+        top: 80px;
+      }
+      .bauble-2 {
+        left: 150px;
+        top: 230px;
+      }
+      .bauble-3 {
+        left: 300px;
+        top: 230px;
+      }
+      .bauble-4 {
+        left: 80px;
+        top: 310px;
+      }
+      .bauble-5 {
+        left: 200px;
+        top: 280px;
+      }
+      .bauble-6 {
+        left: 360px;
+        top: 330px;
+      }
+      .bauble-7 {
+        left: 170px;
+        top: 120px;
+      }
+      .bauble-8 {
+        left: 244px;
+        top: 173px;
+      }
+
+      .branch-1 {
         width: 60px;
         height: 50px;
       }
 
-      .ball-1 {
-        --ball-size: 40px;
-        width: var(--ball-size);
-        height: var(--ball-size);
+      .bauble-1 {
+        --bauble-size: 40px;
+        width: var(--bauble-size);
+        height: var(--bauble-size);
         border-radius: 50px;
         position: absolute;
       }
 
-      .tree-2 {
+      .branch-2 {
         width: 120px;
         height: 50px;
       }
 
-      .ball-2 {
-        --ball-size: 40px;
-        width: var(--ball-size);
-        height: var(--ball-size);
+      .bauble-2 {
+        --bauble-size: 40px;
+        width: var(--bauble-size);
+        height: var(--bauble-size);
         border-radius: 50px;
         position: absolute;
       }
 
-      .tree-3 {
+      .branch-3 {
         width: 180px;
         height: 50px;
       }
 
-      .ball-3 {
-        --ball-size: 40px;
-        width: var(--ball-size);
-        height: var(--ball-size);
+      .bauble-3 {
+        --bauble-size: 40px;
+        width: var(--bauble-size);
+        height: var(--bauble-size);
         border-radius: 50px;
         position: absolute;
       }
 
-      .tree-4 {
+      .branch-4 {
         width: 240px;
         height: 50px;
       }
 
-      .ball-4 {
-        --ball-size: 40px;
-        width: var(--ball-size);
-        height: var(--ball-size);
+      .bauble-4 {
+        --bauble-size: 40px;
+        width: var(--bauble-size);
+        height: var(--bauble-size);
         border-radius: 50px;
         position: absolute;
       }
 
-      .tree-5 {
+      .branch-5 {
         width: 300px;
         height: 50px;
       }
 
-      .ball-5 {
-        --ball-size: 40px;
-        width: var(--ball-size);
-        height: var(--ball-size);
+      .bauble-5 {
+        --bauble-size: 40px;
+        width: var(--bauble-size);
+        height: var(--bauble-size);
         border-radius: 50px;
         position: absolute;
       }
 
-      .tree-6 {
+      .branch-6 {
         width: 360px;
         height: 50px;
       }
 
-      .ball-6 {
-        --ball-size: 40px;
-        width: var(--ball-size);
-        height: var(--ball-size);
+      .bauble-6 {
+        --bauble-size: 40px;
+        width: var(--bauble-size);
+        height: var(--bauble-size);
         border-radius: 50px;
         position: absolute;
       }
 
-      .tree-7 {
+      .branch-7 {
         width: 420px;
         height: 50px;
       }
 
-      .ball-7 {
-        --ball-size: 40px;
-        width: var(--ball-size);
-        height: var(--ball-size);
+      .bauble-7 {
+        --bauble-size: 40px;
+        width: var(--bauble-size);
+        height: var(--bauble-size);
         border-radius: 50px;
         position: absolute;
       }
 
-      .tree-8 {
+      .branch-8 {
         width: 480px;
         height: 50px;
       }
 
-      .ball-8 {
-        --ball-size: 40px;
-        width: var(--ball-size);
-        height: var(--ball-size);
+      .bauble-8 {
+        --bauble-size: 40px;
+        width: var(--bauble-size);
+        height: var(--bauble-size);
         border-radius: 50px;
         position: absolute;
       }
 
-      .tree div:nth-child(4n + 1) {
+      .branches div:nth-child(4n + 1) {
         background: #2d6359;
         box-shadow: var(--shadow);
       }
 
-      .ball div:nth-child(4n + 1) {
+      .baubles div:nth-child(4n + 1) {
         background: #e388b1;
         box-shadow: var(--shadow);
       }
 
-      .tree div:nth-child(4n + 2) {
+      .branches div:nth-child(4n + 2) {
         background: #32776a;
         box-shadow: var(--shadow);
       }
 
-      .ball div:nth-child(4n + 2) {
+      .baubles div:nth-child(4n + 2) {
         background: #f4d348;
         box-shadow: var(--shadow);
       }
 
-      .tree div:nth-child(4n + 3) {
+      .branches div:nth-child(4n + 3) {
         background: #268b4c;
         box-shadow: var(--shadow);
       }
 
-      .ball div:nth-child(4n + 3) {
+      .baubles div:nth-child(4n + 3) {
         background: #37799e;
         box-shadow: var(--shadow);
       }
 
-      .tree div:nth-child(4n + 4) {
+      .branches div:nth-child(4n + 4) {
         background: #459763;
         box-shadow: var(--shadow);
       }
 
-      .ball div:nth-child(4n + 4) {
+      .baubles div:nth-child(4n + 4) {
         background: #bb3e39;
         box-shadow: var(--shadow);
       }
@@ -167,14 +200,14 @@
         background-color: #f6eec9;
       }
 
-      .xmas,
-      .tree {
+      .tree,
+      .branches {
         display: flex;
         align-items: center;
         flex-direction: column;
       }
 
-      .xmas {
+      .tree {
         margin: 6rem 0 0 0;
       }
 
@@ -183,7 +216,7 @@
         z-index: 2;
       }
 
-      .tree {
+      .branches {
         position: relative;
       }
 
@@ -195,38 +228,6 @@
         box-shadow: var(--shadow);
       }
 
-      .ball-1 {
-        left: 250px;
-        top: 80px;
-      }
-      .ball-2 {
-        left: 150px;
-        top: 230px;
-      }
-      .ball-3 {
-        left: 300px;
-        top: 230px;
-      }
-      .ball-4 {
-        left: 80px;
-        top: 310px;
-      }
-      .ball-5 {
-        left: 200px;
-        top: 280px;
-      }
-      .ball-6 {
-        left: 360px;
-        top: 330px;
-      }
-      .ball-7 {
-        left: 170px;
-        top: 120px;
-      }
-      .ball-8 {
-        left: 244px;
-        top: 173px;
-      }
       h1 {
         font-family: 'Christmas Wish Calligraphy', sans-serif;
         font-size: 6rem;
@@ -259,27 +260,27 @@
   <body translate="no">
     <h1>Merry Christmas and Happy New Year</h1>
 
-    <div class="xmas">
-      <div class="tree">
-        <div class="ball">
-          <div class="ball-1"></div>
-          <div class="ball-2"></div>
-          <div class="ball-3"></div>
-          <div class="ball-4"></div>
-          <div class="ball-5"></div>
-          <div class="ball-6"></div>
-          <div class="ball-7"></div>
-          <div class="ball-8"></div>
-          <div class="ball-9"></div>
+    <div class="tree">
+      <div class="branches">
+        <div class="baubles">
+          <div class="bauble bauble-1"></div>
+          <div class="bauble bauble-2"></div>
+          <div class="bauble bauble-3"></div>
+          <div class="bauble bauble-4"></div>
+          <div class="bauble bauble-5"></div>
+          <div class="bauble bauble-6"></div>
+          <div class="bauble bauble-7"></div>
+          <div class="bauble bauble-8"></div>
+          <div class="bauble bauble-9"></div>
         </div>
-        <div class="tree-1"></div>
-        <div class="tree-2"></div>
-        <div class="tree-3"></div>
-        <div class="tree-4"></div>
-        <div class="tree-5"></div>
-        <div class="tree-6"></div>
-        <div class="tree-7"></div>
-        <div class="tree-8"></div>
+        <div class="branch-1"></div>
+        <div class="branch-2"></div>
+        <div class="branch-3"></div>
+        <div class="branch-4"></div>
+        <div class="branch-5"></div>
+        <div class="branch-6"></div>
+        <div class="branch-7"></div>
+        <div class="branch-8"></div>
       </div>
       <div class="trunk"></div>
 
